Volume button z-index fix

--- a/cartoon/css/app.css
+++ b/cartoon/css/app.css
@@ -303,7 +303,7 @@ body {
   left: 60px;
   background: green url("../images/volume.png") no-repeat 50% 50%;
   background-size: 15px;
-  z-index: 10;
+  z-index: 1;
 }
 .sounds-of-nature .volume-area {
   position: fixed;
