--- a/cartoon/css/components/_sounds-of-nature.scss
+++ b/cartoon/css/components/_sounds-of-nature.scss
@@ -33,7 +33,7 @@
 			left: 60px;
 			background: green url("../images/volume.png") no-repeat 50% 50%;
 			background-size: 15px;
-			z-index: 10;
+			z-index: 1;
 		}
 	}
 
